<resources>
    <string name="app_name">Sorveteria</string>
    <string name="txt_tipo">Tipo</string>
    <string name="txt_sabor">Sabor</string>
    <string name="txt_quantidade">Quantidade</string>
    <string name="txt_pedido">Pedido</string>

    <string name="ckb_chocolate">Chocolate</string>
    <string name="ckb_creme">Creme</string>
    <string name="ckb_flocos">Flocos</string>
    <string name="ckb_morango">Morango</string>
    <string name="ckb_napolitano">Napolitano</string>

    <string name="btn_finalizar">Finalizar</string>
    <string name="btn_voltar">Voltar</string>

    <string-array name="tipos">
        <item>Cone</item>
        <item>Cone Duplo</item>
        <item>Picolé</item>
        <item>Sundae</item>
    </string-array>
</resources>